--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BJ TRICKS BIO</title>
+    <title>TECH_SANDEEP_ANIME</title>
     <style>
         * {
             margin: 0;
@@ -120,14 +120,14 @@
     </video>
 
     <div class="container">
-        <div class="title">BJ TRICKS 𝗛4𝗫 𝗕𝗜𝗢</div>
+        <div class="title">TECH_SANDEEP_ANIME 𝗕𝗜𝗢</div>
 
-        <img src="https://i.ibb.co/kDz7bj3/20200927-140432.png" alt="Profile Picture">
+        <img src="https://i.ibb.co/NYBFRzF/IMG-20250109-233701-039.jpg" alt="Profile Picture">
         
-        <h1><a href="https://t.me/BJ_Coder">BJ TRICKS 𝗛4𝗫</a></h1>
+        <h1><a href="https://t.me/BJ_Coder">@TECH_SANDEEP_ANIME</a></h1>
 
         <div class="inline-details">
-            <div class="place">𝗣𝗜𝗔𝗖𝗘 : PAKISTAN</div>
+            <div class="place">𝗣𝗜𝗔𝗖𝗘 : INDIA</div>
             <div>𝗔𝗚𝗘 → 18</div>
             <div class="best-friend"><a href="https://t.me/HACKER_COMMUNTY1">𝗕𝗘𝗦𝗧 𝗙𝗥𝗜𝗘𝗡𝗗 →Abdullah-Khan 🗿</a></div>
         </div>
